--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
